--- a/ConnectedAgents/ConnectedAgents.csproj
+++ b/ConnectedAgents/ConnectedAgents.csproj
@@ -5,13 +5,14 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>3c5e59c3-f04e-420a-91ee-e247d706f7f0</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Azure.AI.Agents.Persistent" Version="1.1.0" />
-        <PackageReference Include="Azure.Identity" Version="1.14.2" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.7" />
+        <PackageReference Include="Azure.AI.Agents.Persistent" Version="1.1.0"/>
+        <PackageReference Include="Azure.Identity" Version="1.14.2"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.7"/>
     </ItemGroup>
 
 </Project>
