--- a/DataAgent/DataAgent.csproj
+++ b/DataAgent/DataAgent.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="Azure.AI.Agents.Persistent" Version="1.1.0" />
       <PackageReference Include="Azure.Identity" Version="1.14.2" />
+      <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.4.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.7" />
     </ItemGroup>
